--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
-on: [push]
-permissions:
-  contents: write
+on:
+  pull_request:
+    branches: [main]
+    paths-ignore:
+      - '*.md'
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Test the action
+    name: Run the action on a test graph
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -13,10 +15,3 @@ jobs:
         uses: logseq/publish-spa@main
         with:
           graph-directory: test/publish-test-graph
-
-      - name: add a nojekyll file # to make sure asset paths are correctly identified
-        run: touch $GITHUB_WORKSPACE/www/.nojekyll
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: www
