--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,9 @@ inputs:
     required: true
     default: 'www'
   version:
-    description: "Version of Logseq - tag or SHA"
+    description: "Frontend version of Logseq - git tag or SHA"
     required: true
-    default: '0.9.1'
+    default: '0.9.2'
 
 runs:
   using: "composite"
