Add theme-mode option for #2

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
         uses: logseq/publish-spa@main
         with:
           graph-directory: test/publish-test-graph
+          theme-mode: dark
 
       - name: add a nojekyll file # to make sure asset paths are correctly identified
         run: touch $GITHUB_WORKSPACE/www/.nojekyll
