--- a/action.yml
+++ b/action.yml
@@ -12,11 +12,15 @@ inputs:
   version:
     description: "Frontend version of Logseq - git tag or SHA"
     required: true
-    default: '0.9.8'
+    default: '0.10.0'
   theme-mode:
     description: "Theme mode of frontend. Can be 'dark' or 'light'"
     required: false
     default: 'light'
+  accent-color:
+    description: "Accent color of frontend. 10+ colors available."
+    required: false
+    default: 'blue'
 
 runs:
   using: "composite"
@@ -84,5 +88,5 @@ runs:
       shell: bash
 
     - name: Export graph to directory
-      run: cd .logseq-publish-spa && node publish_spa.mjs ${{ inputs.output-directory }} --static-directory .logseq-logseq/static --directory ${{ inputs.graph-directory }} --theme-mode ${{ inputs.theme-mode }}
+      run: cd .logseq-publish-spa && node publish_spa.mjs ${{ inputs.output-directory }} --static-directory .logseq-logseq/static --directory ${{ inputs.graph-directory }} --theme-mode ${{ inputs.theme-mode }} --accent-color ${{ inputs.accent-color }}
       shell: bash
