--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/logseq/publish-spa#readme",
   "dependencies": {
-    "@logseq/nbb-logseq": "^1.2.173",
+    "@logseq/nbb-logseq": "logseq/nbb-logseq#feat-db-v1",
+    "better-sqlite3": "8.0.1",
     "fs-extra": "^9.1.0",
-    "mldoc": "^1.5.1",
-    "better-sqlite3": "8.0.1"
+    "mldoc": "^1.5.1"
   }
 }
